--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html>
+<body style="background-color:lightgrey;">
 <head>
 	<meta charset="utf-8">
 	<title>HCI Project Portfolio</title>
@@ -8,18 +9,15 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Scott Klemmer</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
-	<h4>Project Portfolio</h4>
+	<h1><font color="purple">Weichen Wang</font></h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h3>Project Portfolio</h3>
 
 	<!-- p means paragraph -->
-	<p>Scott is an Associate Professor of Cognitive Science and Computer Science & Engineering at UC San Diego, where he is a co-founder and Associate Director of the Design Lab. He previously served as Associate Professor of Computer Science at Stanford, where he co-directed the HCI Group, held the Bredt Faculty Scholar chair, and was a founding participant in the d.school. </p>
+	<p>I am a first year Master student studying Computer Science and Engineering at UC San Diego. I received B.S. in Computer Science and Information Engineering at National Taiwan University.</p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<a href="255.html">2015 Fall CSE 255 Final Project: San Francisco Crime Classification</a>
 	</ol>
 </body>
 </html>
