--- a/static/index.html
+++ b/static/index.html
@@ -48,7 +48,7 @@
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
-							<p>Android application connects to biild-in microphone. Speeach to text and analysis.</p>
+							<p>Android application connects to built-in microphone. Speeach to text and semantic analysis.</p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-code"></span>
