--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>mood</title>
+		<title>moodiary</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -35,7 +35,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Mood Diary</h1>
+							<h1>MOODIARY</h1>
 							<p>Speak something and record your life!<br /></p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
@@ -47,22 +47,32 @@
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About the Project</h2>
-							<p>What's your feeling today? Have something want to say and record? It is an Android application which is for you to say something and record your words. The app will connect to your phone's built-in microphone. After you say something, we will convert your words to text and do semantic analysis to estimate your mood today!</p>
+							<p>What's your feeling today? Have something want to say and record? It is an Android application features audio diary, which is for you to say something and record your words. The app will connect to your phone's built-in microphone. After you speak something, we will convert your words to text and do semantic analysis to estimate your mood today! You could also see the history page for what you have recorded before.</p>
 							<div class="features">
+								<section>
+									<span class="icon major fa-diamond"></span>
+									<h3>Landing Page</h3>
+									<p>Click "START" to start using MOODIARY!</p>
+									<br>
+									<img src="images/1.jpg" height="400" width="auto"/>
+								</section>
 								<section>
 									<span class="icon major fa-code"></span>
 									<h3>Home Page</h3>
-									<p>The first landing screen of the app.</p>
+									<p>Click "Start Today's" to start recording today's mood or "About Past" to see past recorded history.</p>
+									<img src="images/2.jpg" height="400" width="auto"/>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
-									<h3>History</h3>
-									<p>Past recorded history.</p>
+									<h3>"Start Today's" Page</h3>
+									<p>Click the microphone button to start recording.</p>
+									<br>
+									<img src="images/3.jpg" height="400" width="auto"/>
 								</section>
 								<section>
 									<span class="icon major fa-cog"></span>
-									<h3>Start to record</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>"History" Page</h3>
+									<p>Check the recorded history. Click a specific date and see the history of that date!</p>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
@@ -72,11 +82,6 @@
 								<section>
 									<span class="icon major fa-chain"></span>
 									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 							</div>
