--- a/static/index.html
+++ b/static/index.html
@@ -47,7 +47,7 @@
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About the Project</h2>
-							<p>What's your feeling today? Have something want to say and record? It is an Android application features audio diary, which is for you to say something and record your words. The app will connect to your phone's built-in microphone. After you speak something, we will convert your words to text and do semantic analysis to estimate your mood today! You could also see the history page for what you have recorded before.</p>
+							<p>What's your feeling today? Have something want to say and record? It is an Android application features audio diary, which is for you to say something and record your words. The app connects to your phone's built-in microphone. After you speak something, the speech will be converted into text and a simple semantic analysis is done to estimate your mood today! You could also see the history page for what you have recorded before.</p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-diamond"></span>
@@ -73,17 +73,14 @@
 									<span class="icon major fa-cog"></span>
 									<h3>"History" Page</h3>
 									<p>Check the recorded history. Click a specific date and see the history of that date!</p>
+									<img src="images/4.png" height="400" width="auto"/>
 								</section>
 								<section>
 									<span class="icon major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Some demo cases. Base on the score of words, shows different encourging life quotes.</h3>
+									<img src="images/6.png" height="400" width="auto"/>
 								</section>
-								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
+
 							</div>
 						</div>
 					</section>
@@ -95,8 +92,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Wei-Chen Wang</h2>
-									<p>First year Computer Science master student at UC San Diego. Have particular interest
-										in database systems and data analysis.</p>
+									<p>First year master student in Computer Science at UC San Diego.</p>
 								</div>
 							</div>
 						</section>
@@ -105,7 +101,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Che-Lin Huang</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>First year PhD student in Electrical and Computer Engineering at UC San Diego.</p>
 								</div>
 							</div>
 						</section>
@@ -114,7 +110,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Chien-Han Lin</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>First year master student in Computer Science at UC San Diego.</p>
 								</div>
 							</div>
 						</section>
