--- a/static/index.html
+++ b/static/index.html
@@ -78,7 +78,7 @@
 								<section>
 									<span class="icon major fa-desktop"></span>
 									<h3>Some demo cases. Base on the score of words, shows different encourging life quotes.</h3>
-									<img src="images/6.png" height="400" width="auto"/>
+									<!--img src="images/6.png" height="400" width="auto"/-->
 								</section>
 
 							</div>
