--- a/static/index.html
+++ b/static/index.html
@@ -79,6 +79,12 @@
 									<span class="icon major fa-desktop"></span>
 									<h3>Some demo cases. Base on the score of words, shows different encourging life quotes.</h3>
 									<!--img src="images/6.png" height="400" width="auto"/-->
+									<style type="text/css">
+										.left{float:left; margin-right: 10px;;}
+									</style>
+									<img class="left" src="images/3.png" height="220" width="auto" />
+									<img class="left" src="images/4.png" height="220" width="auto" />
+									<img class="left" src="images/5.png" height="220" width="auto" />
 								</section>
 
 							</div>
