--- a/static/index.html
+++ b/static/index.html
@@ -73,10 +73,10 @@
 									<span class="icon major fa-cog"></span>
 									<h3>"History" Page</h3>
 									<p>Check the recorded history. Click a specific date and see the history of that date!</p>
-									<img src="images/4.png" height="400" width="auto"/>
+									<img src="images/7.png" height="400" width="auto"/>
 								</section>
 								<section>
-									<span class="icon major fa-desktop"></span>
+									<span class="icon major fa-chain"></span>
 									<h3>Some demo cases. Base on the score of words, shows different encourging life quotes.</h3>
 									<!--img src="images/6.png" height="400" width="auto"/-->
 									<style type="text/css">
@@ -94,16 +94,16 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style2 spotlights">
 						<section>
-							<a class="image"><img src="images/weichen.jpg" alt="" data-position="center center" /></a>
+							<a class="image"><img src="images/alice.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Wei-Chen Wang</h2>
+									<h2>Chien-Han Lin</h2>
 									<p>First year master student in Computer Science at UC San Diego.</p>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a class="image"><img src="images/chelin.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Che-Lin Huang</h2>
@@ -112,10 +112,10 @@
 							</div>
 						</section>
 						<section>
-							<a class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a class="image"><img src="images/weichen.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Chien-Han Lin</h2>
+									<h2>Wei-Chen Wang</h2>
 									<p>First year master student in Computer Science at UC San Diego.</p>
 								</div>
 							</div>
